--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
 	<artifactId>EmotIcons</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>quickstart</name>
-	<description></description>
+	<name>EmotIcons</name>
+
 
 	<licenses>
 		<license>
@@ -80,6 +80,9 @@
 			<resource>
 				<filtering>false</filtering>
 				<directory>src/main/resources</directory>
+                <includes>
+                    <include>**</include>
+                </includes>
 			</resource>
 			<resource>
 				<filtering>false</filtering>
